<resources>
    <string name="app_name">YNABDemo</string>
    <string name="budget_id">budget_id</string>
    <string name="title_budget">Budget List</string>
    <string name="title_budget_det">Budget Details</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="no_data">No Data to display</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="date_from_to">From %1$s to %2$s</string>
    <string name="currency_name">Currency : %1$s</string>
    <string name="on_budget">On Budget : %1$s</string>
    <string name="closed">Closed : %1$s</string>
    <string name="note">Note :</string>
    <string name="balance">Balance : %1$s</string>
    <string name="budgeted">Budgeted</string>
    <string name="available">Available</string>
    <string name="select_a_budget_to_view_details">Select a budget to view details</string>
    <string name="write_a_name">Write a name</string>
    <string name="write_the_balance">Write the balance</string>
    <string name="choose_type">Choose Type</string>
    <string name="create_account">Create Account</string>
    <string name="not_implemented">Not Implemented</string>
    <string-array name="account_types">
        <item>Cash</item>
        <item>Credit</item>
    </string-array>
</resources>