<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_details">

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.hm.ynabdemo.ui.budgetDetails.budgetdetails.BudgetDetailsFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/budget_id"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.hm.ynabdemo.ui.budgetDetails.accounts.AccountFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/budget_id"
            android:defaultValue="" />
    </fragment>
</navigation>