<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".ui.addAccount.AddAccountActivity">

        <TextView
            android:id="@+id/account_type_tv"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_type"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_4x"
            android:entries="@array/account_types" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/write_a_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />

        <TextView
            android:id="@+id/balance_tv"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/write_the_balance"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/balance_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/crete_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/create_account" />
    </LinearLayout>
</ScrollView>