<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="com.hm.ynabdemo.data.dto.accounts.AccountItem" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".ui.accountDetails.AccountDetailsActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@{item.name}"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="budgetss title " />


        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:text="@{item.type}"
            android:textColor="@android:color/black"
            tools:text="type" />


        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:textColor="@android:color/black"
            app:mapBalance="@{item.balance}"
            tools:text="@string/balance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16x">

            <TextView
                android:id="@+id/cleared_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8x"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@android:color/holo_green_dark"
                app:mapValue="@{item.clearedBalance}"
                tools:text="@string/balance" />

            <Space
                android:layout_width="@dimen/space_16x"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/uncleared_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8x"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@android:color/holo_red_dark"
                app:mapValue="@{item.unclearedBalance}"
                tools:text="@string/balance" />
        </LinearLayout>

        <TextView
            android:id="@+id/on_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:text="@{@string/on_budget(item.onBudget)}"
            android:textColor="@android:color/black"
            tools:text="@string/on_budget" />

        <TextView
            android:id="@+id/closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:text="@{@string/closed(item.closed)}"
            android:textColor="@android:color/black"
            tools:text="@string/closed" />

        <TextView
            android:id="@+id/note_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:text="@string/note"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8x"
            android:maxLines="2"
            android:text="@{item.note}"
            tools:text="@string/note" />

    </LinearLayout>
</layout>